--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+/* App.css */
+body {
+  font-family: 'Nunito Sans', sans-serif;
+  background-color: #EEE;
+  color: #444;
+}
+h1, h2 {
+  color: #1e1e1e;
+}
+strong {
+  font-weight: 600;
+  color: #000;
+}
+
 .App {
   text-align: center;
 }
